--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 .tile {
     width: 50px;
     height: 50px;
-    background-color: blueviolet;
+    background-color: rgb(197, 146, 104);
     text-align: center;
     top: 50%;
-    margin: 3px;
+    margin: auto;
     display: table-cell;
     /* padding: 3px; */
 }
@@ -20,4 +20,7 @@
 .board {
     width: 250px;
     height: 250px;
+    grid-template-columns: auto auto auto auto;
+    display: grid;
+    background-color: rgb(255, 185, 185);
 }
