--- a/style.css
+++ b/style.css
@@ -3,24 +3,11 @@
     height: 50px;
     background-color: rgb(197, 146, 104);
     text-align: center;
-    top: 50%;
-    margin: auto;
-    display: table-cell;
-    /* padding: 3px; */
-}
-
-.row {
-    padding: 3px;
-    width: 100%;
-    height: 25%;
-    padding: 0;
-    display: table;
+    position: absolute;
 }
 
 .board {
-    width: 250px;
-    height: 250px;
-    grid-template-columns: auto auto auto auto;
-    display: grid;
+    width: 200px;
+    height: 200px;
     background-color: rgb(255, 185, 185);
 }
