--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     background-color: rgb(197, 146, 104);
     text-align: center;
     position: absolute;
+    border: black 1px solid;
 }
 
 .board {
