--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 .tile {
     width: 50px;
     height: 50px;
-    background-color: rgb(197, 146, 104);
     text-align: center;
     position: absolute;
     border: black 1px solid;
+    font-family: 'Space Mono', monospace;
+    line-height: 50px;
+    font-size: 24px;
 }
 
 .board {
