--- a/style.css
+++ b/style.css
@@ -3,14 +3,15 @@
     height: 50px;
     text-align: center;
     position: absolute;
-    border: black 1px solid;
+    /* border: black 1px solid; */
     font-family: 'Space Mono', monospace;
     line-height: 50px;
     font-size: 24px;
+    background-size: cover;
 }
 
 .board {
     width: 200px;
     height: 200px;
-    background-color: rgb(255, 185, 185);
+    /* background-color: rgb(255, 185, 185); */
 }
